Opened 18 years ago
Closed 16 years ago
#256 closed bug (fixed)
[app_server] strange color conversion
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/app_server | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Sometimes when you start Scroll Bar you could get really strange color conversion. This happens to me 3-4 times, but i didn't find the way how to reproduce it. It mostly happens if you run haiku pretty long. Screenshot will follow. Tested with rev16575 infer vmware.
Attachments (2)
Change History (14)
by , 18 years ago
Attachment: | scrollbar.PNG added |
---|
comment:1 by , 18 years ago
Owner: | changed from | to
---|
comment:3 by , 18 years ago
I've had this with other apps too (ScreenSavers being one this morning); should probably reassign to app_server ?
and Terminal - http://flickr.com/photos/johndrinkwater/112831560/
(at least, as far as I see, these are related)
comment:4 by , 18 years ago
Owner: | changed from | to
---|
comment:5 by , 18 years ago
Summary: | [Scroll Bar] strange color conversion → strange color conversion |
---|
comment:7 by , 17 years ago
Description: | modified (diff) |
---|---|
Platform: | → All |
I experienced a simipar problem with Expander too (just once). I think it could be related.
comment:8 by , 17 years ago
I think there might be a bug in the communication layer with the app_server - sometimes the results seem to be clobbered; maybe there is an off-by-one error that's only produced *very* rarely.
comment:9 by , 17 years ago
Component: | - General → Servers/app_server |
---|---|
Version: | → R1 development |
Didn't saw this bug during a year now. I think it could be closed.
comment:10 by , 17 years ago
No this bug still happens sometimes. It can also be reproduced with the test environment. I think it is a timing issue. Usually, some stuff (system fonts, colors?) are initialized already, but very rarely not.
comment:11 by , 16 years ago
Summary: | strange color conversion → [app_server] strange color conversion |
---|
comment:12 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Hopefully fixed by hrev26192. Please reopen if you see it again. The same bug affected Tracker (upper 10% black background and very small icon text size), LaunchBox (black top icon(s)), Playground (similar to screenshot "weird.PNG") and probably other apps.
screenshot of this bug