Make ui_color a little more bulletproof. This will mitigate bug #256 until I can track down the reason (probably in the app_server) that the color request fails

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17069 a95241bf-73f2-0310-859d-f6bbb57e9c96